# Recherche_multimedia

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  dl_works.sh  execution.ini  generatePlan.py  histogram.c  histogram.h  install.py  liste_val_sift.txt  manage.py  nginx.example  project.ini  rdjpeg.c  read_image  read_image.c  sift_plan.ini  train.ini  uwsgi.ini  webapp.py
color_histrogram_csv/: color_res.csv  generateCsv.py  res.csv  structure.csv
demo/: CMakeLists.txt  read_image.c
lib/libsvm-3.21/: FAQ.html  aeroplane.out
plan_templates/: generate_sift_plan.py
plans/: first-plan.ini  fusion.ini  sift_plan.ini  sift_plan_generate_svm.ini  sift_plan_init.ini  train.ini
plans/plan_templates/: fusion.py  (+6 more)
predict_files/: best_results_fusion.txt
python/: concept.py  main.py  structures.py
rapport/: best_results_color.txt  best_results_color.txt.sort  best_results_fusion.txt.sort  best_results_sift.txt  best_results_sift.txt.sort  fusion_entry.txt  sift_results.tar  url_demo.txt
scripts/: concept.py  eval_image.py  find_better_parameters.py  formatSift.py  generateCsv.py  generate_csv_fusion.py  generate_csv_sift.py  generate_mapping.py  histogram.py  jspe.py  kmeans_plot.R  late_fusion.py  siftKmeans.py  sift_histograms.py  structures.py  svm-predict.py  svm-train.py  svm.py  svmToTrecEval.py  trec_eval.py
src/: CMakeLists.txt  histogram.c  histogram.h  rdjpeg.c  rdjpeg.h
templates/: base.html  generate_sift_plan.py  index.html  model.tmpl  model_sift.tmpl  utils.py
webapp/: index.html  index.html.bak  main.js  server.js  todos.css
(+424 files in other folders)
